adding test image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
 	<h1>Testing</h1>
+
+	<img src="https://alexboland.s3.amazonaws.com/images/mind-matter-no-states.png">
 </body>
 </html>
