first serious commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <html>
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Raleway&display=swap" rel="stylesheet">
+	<link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
+</head>
 <body>
-	<h1>Testing</h1>
+	<h2>Alexander Boland</h2>
 
-	<img src="https://alexboland.s3.amazonaws.com/images/mind-matter-no-states.png">
+	<ul>
+		<li><a href="essays/index.html">Essays</a></li>
+		<li><a href="notes/index.html">Scrapbook</a></li>
+		<li><a href="press_releases/index.html">Press Releases</a></li>
+		<li><a href="https://vimeo.com/user84749800">Vimeo (Lectures)</a></li>
+		<li><a href="https://github.com/alexboland">Github</a></li>
+		<li><a href="about.html">About</a>
+	</ul>
+
+	<h3>...and some other projects</h3>
+
+	<ul>
+		<li><a href="https://www.umwelten.net">Umwelten: Book Sharing Community (browser based app)</a></li>
+		<li>Prototype: Excursions in Parable Based Philosophy (under renovation)</li>
+	</ul>
 </body>
 </html>
