--- a/notes/index.html
+++ b/notes/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
 <h2>Scrapbook</h2>
+ 
+<p>Mini-essays, aphorisms, diagrams, incomplete thoughts.</p>
 
-Mini-essays, aphorisms, diagrams, incomplete thoughts.  I will upload quite a few I've collected over the past couple of years but it will take me a second.
+<hr />
+
+<ul>
+	<li><a href = "the_architect.html">The Architect</a></li>
+	<li><a href = "evidence.html">Evidence</a></li>
+	<li><a href = "libraries.html">Libraries</a></li>
+	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition</a></li>
+	<li><a href = "psychosomatic.html">Notes on Psychosomatic Pain</a></li>
+</ul>
+
 </body>
 </html>
