adding two new notes

--- a/notes/index.html
+++ b/notes/index.html
@@ -13,11 +13,13 @@
 <hr />
 
 <ul>
-	<li><a href = "the_architect.html">The Architect</a></li>
+	<li><a href = "the_architect.html">The Architect (September 2018)</a></li>
 	<li><a href = "evidence.html">Evidence</a></li>
 	<li><a href = "libraries.html">Libraries</a></li>
 	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition</a></li>
 	<li><a href = "psychosomatic.html">Notes on Psychosomatic Pain</a></li>
+	<li><a href = "community_and_technology.html">Community and Technology (July 2018)</a></li>
+	<li><a href = "randomness.html">The Invention of Randomness (October 2018)</a></li>
 </ul>
 
 </body>
