--- a/notes/the_architect.html
+++ b/notes/the_architect.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>The Architect</h2>
+<h2>The Architect (September 2018)</h2>
  
 <p>An architect is someone who creates immanent ideas: that is, they don't deal in abstract concepts but build physical affordances that give birth to concepts simply because those new concepts are a strict logical consequence of what now exists.</p>
 
