--- a/notes/index.html
+++ b/notes/index.html
@@ -20,6 +20,7 @@
 	<li><a href = "psychosomatic.html">Notes on Psychosomatic Pain</a></li>
 	<li><a href = "community_and_technology.html">Community and Technology (July 2018)</a></li>
 	<li><a href = "randomness.html">The Invention of Randomness (October 2018)</a></li>
+	<li><a href = "computation_is_dense.html">Computation Is Dense</a></li>
 </ul>
 
 </body>
