a few more notes added

--- a/notes/index.html
+++ b/notes/index.html
@@ -21,6 +21,9 @@
 	<li><a href = "community_and_technology.html">Community and Technology (July 2018)</a></li>
 	<li><a href = "randomness.html">The Invention of Randomness (October 2018)</a></li>
 	<li><a href = "computation_is_dense.html">Computation Is Dense</a></li>
+	<li><a href = "ecocide.html">Ecocide (October 2018)</a></li>
+	<li><a href = "material_sense.html">Material Sense</a></li>
+	<li><a href = "fascism.html">Fascism (October 2018)</a></li>
 </ul>
 
 </body>
