made some edits to the fascism essay

--- a/notes/fascism.html
+++ b/notes/fascism.html
@@ -16,7 +16,7 @@
 
 <hr />
 
-<p>There's a reason that a lot of (though not all) people who left feel the need to constantly talk about it and frame it as some kind of moral imperative: obviously exercise is good for you but nobody is going around asking &quot;do you even get 8 hours of sleep bro?&quot; </p>
+<p>There's a reason that a lot of (though not all) people who lift feel the need to constantly talk about it and frame it as some kind of moral imperative: obviously exercise is good for you but nobody is going around asking &quot;do you even get 8 hours of sleep bro?&quot; </p>
 
 <p>It needs to be justified on its own merits because the practical difference in your life between being able to deadlift 250 vs. 350 pounds is negligible in the grand scheme of things; it's really not going to make any difference in your longevity or sex life let alone your salary.</p>
 
@@ -36,9 +36,9 @@
 
 <hr />
 
-<p>But in both cases a lack of attachment to any kind of community or tradition leads to a fetishistic echo chamber. On the surface this sounds like a justification for fascism, but I was actually just about to get into what all this has to do with fascism and why gym rats seem to correlate with it.</p>
+<p>But in both cases a lack of attachment to any kind of community or tradition leads to a fetishistic echo chamber. On the surface this sounds like a justification for fascism, but I was actually just about to get into what all this has to do with fascism and why gym rats seem to correlate with it (NB: I have many wonderful friends who lift very heavy pieces of metal and are not fascists!)</p>
 
-<p>No, it's not testosterone, even though that definitely is responsible for aggression and risk-taking. Just like water can be a puddle or a stream depending on whether you dig a trench, how aggression manifests itself is a matter of context.</p>
+<p>No, it's not testosterone, even though that definitely is a factor in aggression and risk-taking. Just like water can be a puddle or a stream depending on whether you dig a trench, how aggression manifests itself is a matter of context.</p>
 
 <hr />
 
