a few more notes added

--- a/notes/index.html
+++ b/notes/index.html
@@ -24,6 +24,10 @@
 	<li><a href = "ecocide.html">Ecocide (October 2018)</a></li>
 	<li><a href = "material_sense.html">Material Sense</a></li>
 	<li><a href = "fascism.html">Fascism (October 2018)</a></li>
+	<li><a href = "exchange.html">The Exchange (October 2018)</a></li>
+	<li><a href = "archiving.html">Archiving (February 2019)</a></li>
+	<li><a href = "dreams.html">Rough Theory of Dreams (April 2019)</a>
+	<li><a href = "against_consequentialism.html">Against Copnsequentialism (January 2019)</a>
 </ul>
 
 </body>
