--- a/notes/index.html
+++ b/notes/index.html
@@ -27,7 +27,7 @@
 	<li><a href = "exchange.html">The Exchange (October 2018)</a></li>
 	<li><a href = "archiving.html">Archiving (February 2019)</a></li>
 	<li><a href = "dreams.html">Rough Theory of Dreams (April 2019)</a>
-	<li><a href = "against_consequentialism.html">Against Copnsequentialism (January 2019)</a>
+	<li><a href = "against_consequentialism.html">Against Consequentialism (January 2019)</a>
 </ul>
 
 </body>
