added new note plus added smartphone width fix

--- a/notes/index.html
+++ b/notes/index.html
@@ -13,6 +13,7 @@
 <hr />
 
 <ul>
+	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
 	<li><a href = "the_architect.html">The Architect (September 2018)</a></li>
 	<li><a href = "evidence.html">Evidence</a></li>
 	<li><a href = "libraries.html">Libraries</a></li>
