fixing forms essay

--- a/notes/causes.html
+++ b/notes/causes.html
@@ -24,6 +24,12 @@
 
 <hr />
 
+<p>The formal cause of something is not a &quot;blueprint&quot;, a blueprint is just someone's guess about what the form could be.</p>
+
+<p>Form is the part of something that logically composes. That is, &quot;essence&quot; as opposed to &quot;accidents&quot;. No, it has nothing to do with predetermined forms in the heavens, it's just a question of which things connnect tautologically rather than empirically. The syntax, not the semantics.</p>
+
+<hr />
+
 <p>Computation by definition eats and shits grammar. It can't be conceptualized otherwise.</p>
 
 <p>But you need grammar to say an event &quot;A&quot; caused an event &quot;B&quot;, since you need these events and the transition from one to the other to be clearly defined.</p>
