--- a/notes/index.html
+++ b/notes/index.html
@@ -15,6 +15,7 @@
 <ul>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
 	<li><a href = "the_architect.html">The Architect (September 2018)</a></li>
+	<li><a href = "memory_story_text.html">Memory, Story, Text (October 2018)</a></li>
 	<li><a href = "evidence.html">Evidence</a></li>
 	<li><a href = "libraries.html">Libraries</a></li>
 	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition</a></li>
