adding date to note

--- a/notes/memory_story_text.html
+++ b/notes/memory_story_text.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>Memory, Story, Text</h2>
+<h2>Memory, Story, Text (October 2018)</h2>
  
 <p>Memory is lazy.</p>
 
