adding another 2019 note

--- a/notes/index.html
+++ b/notes/index.html
@@ -14,6 +14,7 @@
 
 <ul>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
+	<li><a href = "learned_helplessness.html">Learned Helplessness (April 2019)</a></li>
 	<li><a href = "the_architect.html">The Architect (September 2018)</a></li>
 	<li><a href = "memory_story_text.html">Memory, Story, Text (October 2018)</a></li>
 	<li><a href = "evidence.html">Evidence</a></li>
