--- a/essays/index.html
+++ b/essays/index.html
@@ -9,8 +9,9 @@
 <h1>Essays:</h1>
 
 <ul>
-	<li><a href="against_allostasis.html">Against Allostasis (2015)</a></li>
+	<li><a href="utility.html">Imagine A Utility Function Stamping On A Human Face Forever (2020)</a></li>
 	<li><a href="narrative_engineering.html">Narrative Engineering (2019)</a></li>
+	<li><a href="against_allostasis.html">Against Allostasis (2015)</a></li>
 </ul>
 </body>
 </html>
