adding titles to long form essays

--- a/essays/against_allostasis.html
+++ b/essays/against_allostasis.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<title>Against Allostasis</title>
 	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Raleway|Open+Sans|Crimson+Text&display=swap" rel="stylesheet">
 	<link rel = "stylesheet"
    type = "text/css"
