--- a/essays/narrative_engineering.html
+++ b/essays/narrative_engineering.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Narrative Engineering</title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Raleway|Open+Sans|Crimson+Text&display=swap" rel="stylesheet">
     <link rel = "stylesheet"
    type = "text/css"
