--- a/essays/utility.html
+++ b/essays/utility.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+	<title>Imagine A Utility Function Stamping On A Human Face Forever</title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Raleway|Open+Sans|Crimson+Text&display=swap" rel="stylesheet">
     <link rel = "stylesheet"
    type = "text/css"
