added new notes and made order of notes chronological on list

--- a/notes/index.html
+++ b/notes/index.html
@@ -14,23 +14,24 @@
 
 <ul>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
+	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition</a></li>
+	<li><a href = "dreams.html">Rough Theory of Dreams (April 2019)</a>
 	<li><a href = "learned_helplessness.html">Learned Helplessness (April 2019)</a></li>
-	<li><a href = "the_architect.html">The Architect (September 2018)</a></li>
+	<li><a href = "archiving.html">Archiving (February 2019)</a></li>
+	<li><a href = "against_consequentialism.html">Against Consequentialism (January 2019)</a>
+	<li><a href = "randomness.html">The Invention of Randomness (October 2018)</a></li>
 	<li><a href = "memory_story_text.html">Memory, Story, Text (October 2018)</a></li>
+	<li><a href = "exchange.html">The Exchange (October 2018)</a></li>
+	<li><a href = "fascism.html">Fascism (October 2018)</a></li>
+	<li><a href = "ecocide.html">Ecocide (October 2018)</a></li>
+	<li><a href = "the_architect.html">The Architect (September 2018)</a></li>
+	<li><a href = "repulsion.html">Repulsion (May 2018)</a></li>
 	<li><a href = "evidence.html">Evidence</a></li>
 	<li><a href = "libraries.html">Libraries</a></li>
-	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition</a></li>
 	<li><a href = "psychosomatic.html">Notes on Psychosomatic Pain</a></li>
 	<li><a href = "community_and_technology.html">Community and Technology (July 2018)</a></li>
-	<li><a href = "randomness.html">The Invention of Randomness (October 2018)</a></li>
 	<li><a href = "computation_is_dense.html">Computation Is Dense</a></li>
-	<li><a href = "ecocide.html">Ecocide (October 2018)</a></li>
 	<li><a href = "material_sense.html">Material Sense</a></li>
-	<li><a href = "fascism.html">Fascism (October 2018)</a></li>
-	<li><a href = "exchange.html">The Exchange (October 2018)</a></li>
-	<li><a href = "archiving.html">Archiving (February 2019)</a></li>
-	<li><a href = "dreams.html">Rough Theory of Dreams (April 2019)</a>
-	<li><a href = "against_consequentialism.html">Against Consequentialism (January 2019)</a>
 </ul>
 
 </body>
