dating notes that were undated, adding note on emergence

--- a/notes/computation_is_dense.html
+++ b/notes/computation_is_dense.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>Computation is Dense</h2>
+<h2>Computation is Dense (September 2018)</h2>
  
 <p>Computation is dense in the Real</p>
 
