--- a/notes/libraries.html
+++ b/notes/libraries.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>Libraries</h2>
+<h2>Libraries (May 2018)</h2>
  
 <p>The difference between a library and a reading list is that a reading list neurotically keeps some kind of arbitrary score and turns exploration and serendipity into a spectator sport.</p>
 
