--- a/notes/psychosomatic.html
+++ b/notes/psychosomatic.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>Notes on Psychosomatic Pain</h2>
+<h2>Notes on Psychosomatic Pain (April 2019)</h2>
  
 <p>Information is not some simple variable without context, it always exists in relation to some function/task/conflict.</p>
 
