--- a/notes/whitney_biennial.html
+++ b/notes/whitney_biennial.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>Epistemology for the End of the World: Whitney Biennial Edition</h2>
+<h2>Epistemology for the End of the World: Whitney Biennial Edition (September 2019)</h2>
  
 <p>It finally hit me what bothers me so much about the vast majority of contemporary art. It was just a matter of putting together what I already concluded earlier:</p>
 
