--- a/notes/evidence.html
+++ b/notes/evidence.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>Evidence</h2>
+<h2>Evidence (May 2018)</h2>
  
 <p>Ideas don't get destroyed by "facts" or "evidence", but simply by time.  The former are just (categorized) symptoms of the latter.</p>
 
