--- a/notes/index.html
+++ b/notes/index.html
@@ -14,8 +14,10 @@
 
 <ul>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
-	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition</a></li>
+	<li><a href = "emergence.html">Notes On Properties and Emergence</a></li>
+	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition (September 2019)</a></li>
 	<li><a href = "dreams.html">Rough Theory of Dreams (April 2019)</a>
+	<li><a href = "psychosomatic.html">Notes on Psychosomatic Pain (April 2019)</a></li>
 	<li><a href = "learned_helplessness.html">Learned Helplessness (April 2019)</a></li>
 	<li><a href = "archiving.html">Archiving (February 2019)</a></li>
 	<li><a href = "against_consequentialism.html">Against Consequentialism (January 2019)</a>
@@ -25,13 +27,12 @@
 	<li><a href = "fascism.html">Fascism (October 2018)</a></li>
 	<li><a href = "ecocide.html">Ecocide (October 2018)</a></li>
 	<li><a href = "the_architect.html">The Architect (September 2018)</a></li>
-	<li><a href = "repulsion.html">Repulsion (May 2018)</a></li>
-	<li><a href = "evidence.html">Evidence</a></li>
-	<li><a href = "libraries.html">Libraries</a></li>
-	<li><a href = "psychosomatic.html">Notes on Psychosomatic Pain</a></li>
+	<li><a href = "computation_is_dense.html">Computation Is Dense (September 2018)</a></li>
 	<li><a href = "community_and_technology.html">Community and Technology (July 2018)</a></li>
-	<li><a href = "computation_is_dense.html">Computation Is Dense</a></li>
-	<li><a href = "material_sense.html">Material Sense</a></li>
+	<li><a href = "material_sense.html">Material Sense (July 2018)</a></li>
+	<li><a href = "repulsion.html">Repulsion (May 2018)</a></li>
+	<li><a href = "evidence.html">Evidence (May 2018)</a></li>
+	<li><a href = "libraries.html">Libraries (May 2018)</a></li>
 </ul>
 
 </body>
