--- a/notes/material_sense.html
+++ b/notes/material_sense.html
@@ -6,7 +6,7 @@
    href = "../style.css" />
 </head>
 <body>
-<h2>Material Sense</h2>
+<h2>Material Sense (July 2018)</h2>
  
 <p>Doing actual things in the real world is the *only* possible "semantic grounding".</p>
 
