--- a/notes/index.html
+++ b/notes/index.html
@@ -14,7 +14,7 @@
 
 <ul>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
-	<li><a href = "emergence.html">Notes On Properties and Emergence</a></li>
+	<li><a href = "emergence.html">Notes On Properties and Emergence (October 2019)</a></li>
 	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition (September 2019)</a></li>
 	<li><a href = "dreams.html">Rough Theory of Dreams (April 2019)</a>
 	<li><a href = "psychosomatic.html">Notes on Psychosomatic Pain (April 2019)</a></li>
