--- a/notes/index.html
+++ b/notes/index.html
@@ -13,6 +13,7 @@
 <hr />
 
 <ul>
+	<li><a href = "theory_like_poetry.html">Reading Theory "Like Poetry" (May 2020)</a></li>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
 	<li><a href = "emergence.html">Notes On Properties and Emergence (October 2019)</a></li>
 	<li><a href = "whitney_biennial.html">Epistemology for the End of the World: Whitney Biennial Edition (September 2019)</a></li>
