--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -18,7 +18,7 @@
 		<li>Affordances / Co-Evolution</li>
 		<li>Hysteresis / Ergodicity</li>
 		<li>Prototypes / Syntax </li>
-		<li><a href="narrative_data.html">Narrative / Data</a></li>
+		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
 		<li>Kairos / Chronos</li>
 		<li>Hermeneutics / Decomposition</li>
 		<li>Contingency / Determinism</li>
