--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -15,7 +15,7 @@
 	<ul>
 		<li><a href="ingress.html">Ingress</a></li>
 		<li><a href="concepts/enactments_kernels.html">Enactments / Kernels</a></li>
-		<li>Affordances / Co-Evolution</li>
+		<li><a href="concepts/affordances_coevolution.html">Affordances / Co-Evolution</a></li>
 		<li>Hysteresis / Ergodicity</li>
 		<li>Prototypes / Syntax </li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
@@ -55,6 +55,8 @@
 		<li>The Psychoanalytic Subconscious</li>
 		<li>Scientific Paradigms</li>
 		<li>Godel's Incompleteness Theorem</li>
+		<li>The Yoneda Lemma</li>
+		<li>Images (Bergson)</li>
 	</ul>
 </body>
 </html>
