fixing period typo

--- a/actors_and_matters/concepts/narrative_data.html
+++ b/actors_and_matters/concepts/narrative_data.html
@@ -8,7 +8,7 @@
 <body class="book">
 	<h1>Narrative and Data</h1>
 
-	<p><i>Authors note: This is a very rough draft and an attempt to treat this subject with some degree of formality.  For a more cogent but less formal exposition, see my essay <a href = "../../essays/narrative_engineering.html">Narrative Engineering</a></i></p>.
+	<p><i>Authors note: This is a very rough draft and an attempt to treat this subject with some degree of formality.  For a more cogent but less formal exposition, see my essay <a href = "../../essays/narrative_engineering.html">Narrative Engineering</a></i>.</p>
 
 	<h2>Models and Fictions</h2>
 
