fixing one more typo

--- a/actors_and_matters/concepts/narrative_data.html
+++ b/actors_and_matters/concepts/narrative_data.html
@@ -72,7 +72,7 @@
 
 	<h2>The Fourth Wall</h2>
 
-	[In progress, will talk about the phylogeny/ontogeny of narrative from ritual to drama to fiction to media and what this tells us, as well as the narrative basis of science, politics, and ]
+	<p>[In progress, will talk about the phylogeny/ontogeny of narrative from ritual to drama to fiction to media and what this tells us, as well as the narrative basis of science, politics, and biology]</p>
 
 
 	<h2>Data Are Limits</h2>
