wrote most of first draft of prototypes/syntax chapter

--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -10,18 +10,32 @@
 
 	<p>Note: most items in these contents do not link to anything yet, the ones that do are underlined.</p>
 
-	<h2>Intro & Key Concepts</h2>
+	<h2>Key Concepts</h2>
+
+	<h3>Introduction</h3>
 
 	<ul>
 		<li><a href="ingress.html">Ingress</a></li>
+	</ul>
+
+	<h3>Dyads</h3>
+
+	<ul>
 		<li><a href="concepts/enactments_kernels.html">Enactments / Kernels</a></li>
 		<li><a href="concepts/affordances_coevolution.html">Affordances / Co-Evolution</a></li>
 		<li>Hysteresis / Ergodicity</li>
-		<li>Prototypes / Syntax </li>
+		<li><a href="prototypes_syntax.html">Prototypes / Syntax</a></li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
 		<li>Kairos / Chronos</li>
 		<li>Hermeneutics / Decomposition</li>
 		<li>Contingency / Determinism</li>
+	</ul>
+
+	<h3>Triads</h3>
+
+	<ul>
+		<li>Memory - Story - Text</li>
+		<li>Habits - Maps - Skills</li>
 	</ul>
 
 	<h2>Reconceptualizations</h2>
