--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -24,7 +24,7 @@
 		<li><a href="concepts/enactments_kernels.html">Enactments / Kernels</a></li>
 		<li><a href="concepts/affordances_coevolution.html">Affordances / Co-Evolution</a></li>
 		<li>Hysteresis / Ergodicity</li>
-		<li><a href="prototypes_syntax.html">Prototypes / Syntax</a></li>
+		<li><a href="concepts/prototypes_syntax.html">Prototypes / Syntax</a></li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
 		<li>Kairos / Chronos</li>
 		<li>Hermeneutics / Decomposition</li>
