fixing formatting on quote, still ugly

--- a/actors_and_matters/concepts/prototypes_syntax.html
+++ b/actors_and_matters/concepts/prototypes_syntax.html
@@ -8,9 +8,9 @@
 <body class="book">
 	<h1>Prototypes and Syntax</h1>
 
-	<quote>No experience would count as grounds for revising, for example, that 5 + 7 = 12. Were we to add up 5 things and 7 things and get 13 things, we would recount. Should we still, after repeated recounting, get 13 things we would assume that one of the 12 things had split or that we were seeing double or dreaming or even going mad.  The truth is that 5 + 7 = 12 is used to evaluate counting experiences, not the other way around.</quote>
+	<i><p>"No experience would count as grounds for revising, for example, that 5 + 7 = 12. Were we to add up 5 things and 7 things and get 13 things, we would recount. Should we still, after repeated recounting, get 13 things we would assume that one of the 12 things had split or that we were seeing double or dreaming or even going mad.  The truth is that 5 + 7 = 12 is used to evaluate counting experiences, not the other way around."</p>
 
-	Rebecca Goldstein, Incompleteness
+	Rebecca Goldstein, Incompleteness</i>
 
 	<h2>There's No Such Thing as First Principles</h2>
 
