part of a first draft of hermeneutics chapter

--- a/actors_and_matters/concepts/hermeneutics_decomposition.html
+++ b/actors_and_matters/concepts/hermeneutics_decomposition.html
@@ -8,6 +8,12 @@
 <body class="book">
 	<h1>Hermeneutics and Decomposition</h1>
 
+	<h2>Surface Crawling</h2>
+
+	<p>A text has no interior.  No book, document, artwork, institution, or any other object contains content any more than Wittgenstein's box contains a beetle; "the medium is the message."  But there is a meaning to getting "inside" the text: to read a book is to bear witness a story that exists beyond patterns of letters on a page, to know a person is to intertwine oneself with the roads of their subjectivity.  At every step of the way, there's no door to unlock: one gets "inside" by traversing the surface one affordance at a time, simultaneously creating and traversing an invagination within the field of potential interactions between reader (actor) and text, composed of the folds that arise from the twists and turns of a path composed from the reader's own enactments.</p>
+
+	<p>And so the text, while not containing anything, is nonetheless <i>porous</i>, facilitating interiors that can be accessed by sufficiently diligent tracing along the surface.  Each such interior, coextensive with an active process of its "discovery" through skillful evaluation, with an act of <i>reading</i>, is the actualization of a latent potential between the reader and the text that both reveals and determines the "meaning" of the text, that is to say, nothing more and nothing less than the story being told.</p>
+
 
 </body>
 </html>
