additional writing in hermeneutics chapter

--- a/actors_and_matters/concepts/hermeneutics_decomposition.html
+++ b/actors_and_matters/concepts/hermeneutics_decomposition.html
@@ -14,6 +14,8 @@
 
 	<p>And so the text, while not containing anything, is nonetheless <i>porous</i>, facilitating interiors that can be accessed by sufficiently diligent tracing along the surface.  Each such interior, coextensive with an active process of its "discovery" through skillful evaluation, with an act of <i>reading</i>, is the actualization of a latent potential between the reader and the text that both reveals and determines the "meaning" of the text, that is to say, nothing more and nothing less than the story being told.</p>
 
+	<p>I say skillful because reading is indeed a skill: to be able to detect affordances, to have enough experience to traverse them in different ways that lead to different affections, to be able to tell a more nuanced and cogent story just by reading a book or looking at a work of art; to be able to calibrate one's judgment is to be able to tell better stories either to yourself or others with whatever materials you have at hand.  Hermeneutics is bricolage, neither of these defined as one single skill but as a kind of skill, a multiplicity of skills, and possibly the essence of skill in general insofar as one could define it as the actor's grasp of various matters.  Nor is it hierarchical: one does not fine tune one's mental negotiation with materials as a way to tell a "better" story, but as a way to have more stories to tell, more tools for navigating the psychic, social and epistemic tempests of life; to become not a better edge crawler but <i>more fully</i> an edge crawler.</p>
+
 
 </body>
 </html>
