adding hermeneutics and time chapters and also how to read chapter

--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -15,6 +15,7 @@
 	<h3>Introduction</h3>
 
 	<ul>
+		<li><a href="how_to_read.html">How To Read This Book</a></li>
 		<li><a href="ingress.html">Ingress</a></li>
 	</ul>
 
@@ -26,14 +27,15 @@
 		<li>Hysteresis / Ergodicity</li>
 		<li><a href="concepts/prototypes_syntax.html">Prototypes / Syntax</a></li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
-		<li>Kairos / Chronos</li>
-		<li>Hermeneutics / Decomposition</li>
+		<li><a href="concepts/kairos_chronos.html">Kairos / Chronos</a></li>
+		<li><a href="concepts/hermeneutics_decomposition.html">Hermeneutics / Decomposition</a></li>
 		<li>Contingency / Determinism</li>
 	</ul>
 
 	<h3>Triads</h3>
 
 	<ul>
+		<li>Actor - Text - Umwelt</li>
 		<li>Memory - Story - Text</li>
 		<li>Habits - Maps - Skills</li>
 	</ul>
