added link to book on front page

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 		<li><a href="https://vimeo.com/user84749800">Vimeo (Lectures)</a></li>
 		<li><a href="https://github.com/alexboland">Github</a></li>
 		<li><a href="about.html">About</a>
+		<li><a href="actors_and_matters">Actors and Matters (hypertext book in progress)</a></li>
 	</ul>
 
 	<h3>...and some other projects</h3>
 
 	<ul>
 		<li><a href="https://www.umwelten.net">Umwelten: Book Sharing Community (browser based app)</a></li>
-		<li>Prototype: Excursions in Parable Based Philosophy (under renovation)</li>
+		<li>Prototype: Excursions in Parable Based Philosophy (postponed)</li>
 	</ul>
 </body>
 </html>
