first draft of contingency / determinism chapter, partial new draft of hermeneutics chapter, some other cosmetic chnages elsewhere

--- a/actors_and_matters/concepts/affordances_coevolution.html
+++ b/actors_and_matters/concepts/affordances_coevolution.html
@@ -6,7 +6,7 @@
    href = "../../style.css" />
 </head>
 <body class="book">
-	<h1>Affordances and Co-Evolution</h1>
+	<h1>Affordances & Co-Evolution</h1>
 
 	<p>"Meaning" is not found in any kind of extensional semantics, but in the intensional unfolding that comes from the utilization and creation of affordances.</p>
 
