--- a/actors_and_matters/concepts/kairos_chronos.html
+++ b/actors_and_matters/concepts/kairos_chronos.html
@@ -6,9 +6,9 @@
    href = "../../style.css" />
 </head>
 <body class="book">
-	<h1>Kairos and Chronos</h1>
+	<h1>Kairos & Chronos</h1>
 
-	<p>Chronos and Kairos are the two words for time used by the ancient Greeks, Chronos as a sequential passage from past to future, Kairos as the "opportune moment"--perhaps something as brief and fleeting as what we colloquially call a "moment" but perhaps also something as expansive as the right season to sow or the right reason to reap.  We've come to reduce time to only the former, dismissing the latter as a mere epiphenomenon fetishized by scientifically illiterate idealists, a notion regrettably reinforced by the naive denial of Einstein's rigorous confluence of space and time by many thinkers (though contrary to popular belief, not Bergson, whose qualms, justified or not, were about semantic ambiguities), but a pragmatic understanding of these concepts as two attributes by which we can understand time through different <i>topologies</i> with differing pragmatic, historical and technological bases can show why one should not treat these two conceptualizations of time as mutually exclusive.
+	<p>Kairos and Chronos are the two words for time used by the ancient Greeks, Chronos as a sequential passage from past to future, Kairos as the "opportune moment"--perhaps something as brief and fleeting as what we colloquially call a "moment" but perhaps also something as expansive as the right season to sow or the right reason to reap.  We've come to reduce time to only the former, dismissing the latter as a mere epiphenomenon fetishized by scientifically illiterate idealists, a notion regrettably reinforced by the naive denial of Einstein's rigorous confluence of space and time by many thinkers (though contrary to popular belief, not Bergson, whose qualms, justified or not, were about semantic ambiguities), but a pragmatic understanding of these concepts as two attributes by which we can understand time through different <i>topologies</i> with differing pragmatic, historical and technological bases can show why one should not treat these two conceptualizations of time as mutually exclusive.
 
 	<h2>In the Beginning, There Was The Middle</h2>
 
