--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -28,7 +28,9 @@
 		<li><a href="concepts/prototypes_syntax.html">Prototypes / Syntax</a></li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
 		<li><a href="concepts/kairos_chronos.html">Kairos / Chronos</a></li>
-		<li><a href="concepts/hermeneutics_decomposition.html">Hermeneutics / Decomposition</a></li>
+		<li><a href="concepts/hermeneutics_feedback.html">Hermeneutics / Feedback</a></li>
+		<li>Metabolism / Assembly</li>
+		<li>Catalysts / Barriers</li>
 		<li>Contingency / Determinism</li>
 	</ul>
 
@@ -38,6 +40,7 @@
 		<li>Actor - Text - Umwelt</li>
 		<li>Memory - Story - Text</li>
 		<li>Habits - Maps - Skills</li>
+		<li>Causality - Entailment - Gestalt</li>
 	</ul>
 
 	<h2>Reconceptualizations</h2>
