--- a/actors_and_matters/concepts/narrative_data.html
+++ b/actors_and_matters/concepts/narrative_data.html
@@ -6,7 +6,7 @@
    href = "../../style.css" />
 </head>
 <body class="book">
-	<h1>Narrative and Data</h1>
+	<h1>Narrative & Data</h1>
 
 	<p><i>Authors note: This is a very rough draft and an attempt to treat this subject with some degree of formality.  For a more cogent but less formal exposition, see my essay <a href = "../../essays/narrative_engineering.html">Narrative Engineering</a></i>.</p>
 
