fixing menu item and tiny modification to contingency draft

--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -31,7 +31,7 @@
 		<li><a href="concepts/hermeneutics_feedback.html">Hermeneutics / Feedback</a></li>
 		<li>Metabolism / Assembly</li>
 		<li>Catalysts / Barriers</li>
-		<li><a href="concepts/contingency_entailment.html">Contingency / Determinism</a></li>
+		<li><a href="concepts/contingency_entailment.html">Contingency / Entailment</a></li>
 	</ul>
 
 	<h3>Triads</h3>
