--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -23,9 +23,9 @@
 
 	<ul>
 		<li><a href="concepts/enactments_kernels.html">Enactments / Kernels</a></li>
-		<li><a href="concepts/trajectory_state">Trajectory / State</a></li>
+		<li>Trajectory / State</li>
 		<li><a href="concepts/affordances_coevolution.html">Affordances / Co-Evolution</a></li>
-		<li>Eros / Ergodicity</li>
+		<li>Interest / Ergodicity</li>
 		<li><a href="concepts/prototypes_syntax.html">Prototypes / Syntax</a></li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
 		<li><a href="concepts/kairos_chronos.html">Kairos / Chronos</a></li>
