adding 'terraforming the a-priori' and some changes to the table of contents

--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -26,7 +26,7 @@
 		<li><a href="concepts/enactments_kernels.html">Enactments / Kernels</a></li>
 		<li>Trajectory / State</li>
 		<li><a href="concepts/affordances_coevolution.html">Affordances / Co-Evolution</a></li>
-		<li>Interest / Ergodicity</li>
+		<li>Hysteresis / Commutativity</li>
 		<li><a href="concepts/prototypes_syntax.html">Prototypes / Syntax</a></li>
 		<li><a href="concepts/narrative_data.html">Narrative / Data</a></li>
 		<li><a href="concepts/kairos_chronos.html">Kairos / Chronos</a></li>
@@ -45,17 +45,10 @@
 		<li>Causality - Entailment - Gestalt</li>
 	</ul>
 
-	<h2>Reconceptualizations</h2>
-
-	<p>These are pretty whimsical ideas of what some essay-style chapters could be, take them with a grain of salt.</p>
+	<h2>Recitals</h2>
 
 	<ul>
-		<li>Science: Narrative Engineering</li>
-		<li>Pain: Narrative Fragmentation</li>
-		<li>Topology and Tempo in Time and Volition</li>
-		<li>Mesoeconomics: Path-Rationality and Non-Metric Governance</li>
-		<li>All Roads Lead to Aesthetics</li>
-		<li>The Proliferation of Difference</li>
+		<li><a href="recitals/terraforming_the_apriori">terraforming the a-priori</a></li>
 	</ul>
 
 
@@ -63,6 +56,7 @@
 
 	<ul>
 		<li><a href = "appendix/convergence.html">Convergence</a></li>
+		<li>Ergodicity (Probability)</li>
 		<li>Isomorphism (and Homomorphism)</li>
 		<li>Composition</li>
 		<li>Computation</li>
@@ -70,12 +64,14 @@
 		<li>The Three Body Problem</li>
 		<li>Entropy</li>
 		<li>Law of Large Numbers / Central Limit Theorem</li>
+		<li>Jensen's Inequality</li>
 		<li>Zeno's Paradox</li>
 		<li>Aristotle's Four Causes</li>
 		<li>Spinoza's Adequate Ideas</li>
 		<li>The Psychoanalytic Subconscious</li>
 		<li>Scientific Paradigms</li>
 		<li>Godel's Incompleteness Theorem</li>
+		<li>Adjunctions</li>
 		<li>The Yoneda Lemma</li>
 		<li>Images (Bergson)</li>
 	</ul>
