adding appendix entry aobut repetition and generality

--- a/actors_and_matters/index.html
+++ b/actors_and_matters/index.html
@@ -33,7 +33,7 @@
 		<li><a href="concepts/hermeneutics_feedback.html">Hermeneutics / Feedback</a></li>
 		<li>Metabolism / Assembly</li>
 		<li>Catalysts / Barriers</li>
-		<li><a href="concepts/contingency_entailment.html">Contingency / Entailment</a></li>
+		<li><a href="concepts/contingency_entailment.html">Contingency / Entailment</a></li>\
 	</ul>
 
 	<h3>Triads</h3>
@@ -56,6 +56,7 @@
 
 	<ul>
 		<li><a href = "appendix/convergence.html">Convergence</a></li>
+		<li><a href = "appendix/repetition_generality.html">Repetition vs. Generality (Deleuze)</a></li>
 		<li>Ergodicity (Probability)</li>
 		<li>Isomorphism (and Homomorphism)</li>
 		<li>Composition</li>
