adding many new notes including section for aphorisms

--- a/notes/index.html
+++ b/notes/index.html
@@ -13,6 +13,21 @@
 <hr />
 
 <ul>
+	<li><a href = "misc_notes.html">Miscellaneous Tiny Notes (Ongoing)</a></li>
+	<li><a href = "initial_conditions.html">Initial Conditions & "Meta-Stability" (March 2021)</a></li>
+	<li><a href = "guttenberg.html">Guttenberg (March 2021)</a></li>
+	<li><a href = "ashby_measure_fractality.html">Ashby, Measure, & Fractality (February 2021)</a></li>
+	<li><a href = "composition_not_coordination.html">Competition, Not Coordination (February 2021)</a></li>
+	<li><a href = "incompleteness_good.html">Incompleteness Is A Good Thing! (February 2021)</a></li>
+	<li><a href = "descartes.html">Descartes Before The Horse (February 2021)</a></li>
+	<li><a href = "einstein_bergson.html">On Einstein vs. Bergson (February 2021)</a></li>
+	<li><a href = "exchange_value.html">Exchange Value (January 2021)</a></li>
+	<li><a href = "spinoza_intuitionism.html">Spinoza & Intuitionism (January 2021)</a></li>
+	<li><a href = "radioactivity.html">Radioactivity (January 2021)</a></li>
+	<li><a href = "cybernetic_communism.html">The Problem With "Cybernetic Communism" (November 2020)</a></li>
+	<li><a href = "spinoza_and_alienation.html">Spinoza & Alienation (November 2020)</a></li>
+	<li><a href = "intuition_geometric.html">A Geometric Definition of Intuition (September 2020)</a></li>
+	<li><a href = "godel_vs_mechanism.html">Godel vs. Mechanism (August 2020)</a></li>
 	<li><a href = "theory_like_poetry.html">Reading Theory "Like Poetry" (May 2020)</a></li>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
 	<li><a href = "emergence.html">Notes On Properties and Emergence (October 2019)</a></li>
