--- a/notes/against_consequentialism.html
+++ b/notes/against_consequentialism.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Raleway&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Antic|Lora|Montserrat|Raleway&display=swap" rel="stylesheet">
 	<link rel = "stylesheet"
    type = "text/css"
    href = "../style.css" />
