adding more notes to archives

--- a/notes/index.html
+++ b/notes/index.html
@@ -27,7 +27,13 @@
 	<li><a href = "cybernetic_communism.html">The Problem With "Cybernetic Communism" (November 2020)</a></li>
 	<li><a href = "spinoza_and_alienation.html">Spinoza & Alienation (November 2020)</a></li>
 	<li><a href = "intuition_geometric.html">A Geometric Definition of Intuition (September 2020)</a></li>
+	<li><a href = "teleology_as_tool.html">Teleology is a Tool (September 2020)</a></li>	
 	<li><a href = "godel_vs_mechanism.html">Godel vs. Mechanism (August 2020)</a></li>
+	<li><a href = "capital_compound_interest.html">Capital = Compound Interest (August 2020)</a></li>	
+	<li><a href = "negation_tyranny.html">Negation -> Tyranny (August 2020)</a></li>	
+	<li><a href = "narrative_time_topology.html">Narrative, Time, Topology (July 2020)</a></li>
+	<li><a href = "duration_topology.html">Duration & Topology (May 2020)</a></li>
+	<li><a href = "taste.html">Taste is Necessary (May 2020)</a></li>	
 	<li><a href = "theory_like_poetry.html">Reading Theory "Like Poetry" (May 2020)</a></li>
 	<li><a href = "causes.html">On Aristotle's Causes (December 2019)</a></li>
 	<li><a href = "emergence.html">Notes On Properties and Emergence (October 2019)</a></li>
